--- a/css/formulario.css
+++ b/css/formulario.css
@@ -8,8 +8,9 @@
         margin: auto;
         padding: 5%;
     }
+    /* con :nth-child(n) podemos seleccionar el hijo con numero que indiquemo*/
     
-    .formulario>p+p {
+    .formulario :nth-child(2) {
         font-style: italic;
         font-size: small;
     }
