--- a/css/galeria.css
+++ b/css/galeria.css
@@ -1,5 +1,4 @@
 .portada_foto {
-    margin-top: 20px;
     display: block;
     width: 100%;
     height: 20%;
@@ -8,8 +7,15 @@
 }
 
 .galeria {
-    width: 60%;
+    width: 80%;
+    height: 500px;
     margin: auto;
+}
+
+.galeria img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .fa-angle-right {
