--- a/css/formulario.css
+++ b/css/formulario.css
@@ -7,12 +7,18 @@
         background-color: #F2F3F4;
         margin: auto;
         padding: 5%;
+        position: relative;
     }
     /* con :nth-child(n) podemos seleccionar el hijo con numero que indiquemo*/
     
     .formulario :nth-child(2) {
         font-style: italic;
         font-size: small;
+    }
+    
+    form {
+        width: 80%;
+        display: inline-block;
     }
     
     form label {
@@ -24,7 +30,7 @@
     
     form textarea {
         height: 10em;
-        width: 500px;
+        width: 400px;
         padding: 2%;
     }
     
@@ -34,9 +40,9 @@
     
     form button {
         width: 100px;
-        height: 50px;
+        height: 30px;
         font-size: 20px;
-        border-radius: 15px;
+        border-radius: 2px;
     }
     
     .aceptarForm {
