--- a/css/galeria.css
+++ b/css/galeria.css
@@ -9,7 +9,9 @@
 .galeria {
     width: 80%;
     height: 500px;
-    margin: auto;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .galeria img {
