--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,27 +40,7 @@
                     color: #1f4b81;
                     transition: all 0.2s ease;
                 }
-                /* video-consejos */
-                
-                .videos {
-                    width: 80%;
-                    background-color: #F2F3F4;
-                    margin: auto;
-                    padding: 30px;
-                    display: grid;
-                    grid-template-columns: 1fr 1fr 1fr;
-                    grid-template-rows: 1fr 2fr 1fr;
-                    grid-column-gap: 20px;
-                    grid-row-gap: 15px;
-                }
-                
-                .videos div {
-                    height: 150px;
-                    text-align: center;
-                    padding: 10px;
-                    background-color: white;
-                    margin-top: 50px;
-                }
+                /* footer*/
                 
                 footer {
                     height: 210px;
@@ -81,12 +61,39 @@
                 footer a {
                     color: white;
                 }
+                /* video-consejos */
+                
+                .videos {
+                    width: 80%;
+                    background-color: #F2F3F4;
+                    margin: auto;
+                    padding: 30px;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr 1fr;
+                    grid-column-gap: 20px;
+                    grid-row-gap: 15px;
+                }
+                
+                .videos div {
+                    height: 400px;
+                    text-align: center;
+                    padding: 10px;
+                    background-color: white;
+                    margin-top: 50px;
+                }
+                
+                .videos video {
+                    object-fit: cover;
+                    width: 100%;
+                    height: 70%;
+                }
                 
                 .maps {
                     width: 200px;
                     display: inline-block;
                     padding: 15px;
                 }
+                /* Texto pagina Quienes S0mos*/
                 
                 .texto {
                     width: 80%;
