--- a/css/estilos.css
+++ b/css/estilos.css
@@ -65,27 +65,40 @@
                 
                 .videos {
                     width: 80%;
-                    background-color: #F2F3F4;
                     margin: auto;
                     padding: 30px;
                     display: grid;
-                    grid-template-columns: 1fr 1fr 1fr;
+                    grid-template-columns: 1fr 1fr 1fr 1fr;
                     grid-column-gap: 20px;
                     grid-row-gap: 15px;
+                    justify-items: center;
                 }
                 
                 .videos div {
-                    height: 400px;
-                    text-align: center;
+                    height: 300px;
+                    width: 80%;
                     padding: 10px;
-                    background-color: white;
                     margin-top: 50px;
+                    box-shadow: 2px 4px 5px 0px rgba(0, 0, 0, 0.75);
+                    border-radius: 7px 7px 7px 7px;
                 }
                 
                 .videos video {
                     object-fit: cover;
                     width: 100%;
-                    height: 70%;
+                    height: 50%;
+                    margin-bottom: 20px;
+                }
+                
+                .videos p {
+                    width: 90%;
+                    margin-left: 7px;
+                    height: 55px;
+                    border-bottom: 2px solid darkblue;
+                    display: block;
+                    font-size: large;
+                    color: darkblue;
+                    font-weight: bold;
                 }
                 
                 .maps {
