a falta de incluir productos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -129,3 +129,10 @@
                     width: 70%;
                     height: 70%;
                 }
+                
+                .productos {
+                    width: 80%;
+                    height: 800px;
+                    margin: auto;
+                    background-color: lightgrey;
+                }
