--- a/css/tarjetas.css
+++ b/css/tarjetas.css
@@ -4,16 +4,15 @@
         display: grid;
         padding: 50px;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-column-gap: 15px;
         grid-row-gap: 15px;
         justify-items: center;
     }
     
     .tarjetas>div {
-        margin-top: 50px;
+        width: 80%;
         height: 440px;
         box-shadow: 2px 4px 5px 0px rgba(0, 0, 0, 0.75);
-        border-radius: 7px 7px 7px 7px;
+        border-radius: 10px;
         transition: all 0.3s ease;
         cursor: pointer;
     }
@@ -22,10 +21,11 @@
         object-fit: cover;
         width: 100%;
         height: 45%;
+        border-radius: 10px 10px 0 0;
     }
     
     .tarjetas>div:hover {
-        margin-top: -0.2px;
+        margin-top: -5px;
         margin-left: 1px;
         box-shadow: 7px 7px 9px -1px rgba(0, 0, 0, 0.65);
     }
