--- a/css/formulario.css
+++ b/css/formulario.css
@@ -6,6 +6,7 @@
         width: 60%;
         background-color: #F2F3F4;
         margin: auto;
+        margin-bottom: 5%;
         padding: 5%;
         position: relative;
     }
@@ -32,10 +33,14 @@
         height: 10em;
         width: 400px;
         padding: 2%;
+        overflow: hidden;
+        color: black;
     }
     
     form input {
         width: 300px;
+        height: 20px;
+        color: black;
     }
     
     form button {
@@ -43,6 +48,10 @@
         height: 30px;
         font-size: 20px;
         border-radius: 2px;
+    }
+    
+    .form-ivalido {
+        color: red;
     }
     
     .aceptarForm {
@@ -68,11 +77,15 @@
     }
     
     .mapas {
-        width: 400px;
-        height: 250px;
+        width: 40%;
+        height: 30%;
         position: absolute;
-        margin-top: -620px;
-        margin-left: 450px;
-        padding: 15px;
-        text-align: center;
+        margin-top: -630px;
+        margin-left: 480px;
+    }
+    
+    .mapas iframe {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
     }
