--- a/css/galeria.css
+++ b/css/galeria.css
@@ -7,7 +7,6 @@
 }
 
 .galeria {
-    width: 80%;
     height: 500px;
     margin-top: 50px;
     margin-left: auto;
@@ -18,6 +17,7 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+    transition: 2s;
 }
 
 
