--- a/css/tarjetas.css
+++ b/css/tarjetas.css
@@ -1,20 +1,21 @@
     .tarjetas {
-        width: 75%;
+        width: 85%;
         margin: auto;
         display: grid;
         padding: 50px;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-row-gap: 15px;
+        grid-row-gap: 25px;
         justify-items: center;
     }
     
     .tarjetas>div {
-        width: 80%;
+        width: 90%;
         height: 440px;
         box-shadow: 2px 4px 5px 0px rgba(0, 0, 0, 0.75);
         border-radius: 10px;
         transition: all 0.3s ease;
         cursor: pointer;
+        color: #626567;
     }
     
     .cardsImg {
@@ -31,7 +32,6 @@
     }
     
     .tarjetas header {
-        color: darkblue;
         margin: 20px;
         font-weight: bold;
         font-size: 20px;
