--- a/css/formulario.css
+++ b/css/formulario.css
@@ -8,7 +8,8 @@
         margin: auto;
         margin-bottom: 5%;
         padding: 5%;
-        position: relative;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
     /* con :nth-child(n) podemos seleccionar el hijo con numero que indiquemo*/
     
@@ -77,11 +78,9 @@
     }
     
     .mapas {
-        width: 40%;
-        height: 30%;
-        position: absolute;
-        margin-top: -630px;
-        margin-left: 480px;
+        width: 100%;
+        height: 40%;
+        margin-left: 2rem;
     }
     
     .mapas iframe {
